Bug 203842 - incorrect rendering example window in systemsettings
Summary: incorrect rendering example window in systemsettings
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-14 16:26 UTC by Andrey Batyiev
Modified: 2012-04-13 19:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Fix for missing clipping (1.20 KB, patch)
2009-08-25 05:30 UTC, Christoph Feck
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Batyiev 2009-08-14 16:26:01 UTC
Version:            (using KDE 4.3.0)
Compiler:          4.3.2 
OS:                Linux
Installed from:    Gentoo Packages

I try to change window decorations in systemsettings. If systemsettings window small enough, example window starting to draw under "cancel", "accept" etc buttons.
Screenshot: http://img16.imageshack.us/img16/3483/78259914.png
Comment 1 FiNeX 2009-08-15 10:48:26 UTC
Confirmed in current trunk selecting "plastik" windeco.
Comment 2 Christoph Feck 2009-08-25 05:30:58 UTC
Created attachment 36429 [details]
Fix for missing clipping
Comment 3 Christoph Feck 2009-08-25 13:13:30 UTC
SVN commit 1015361 by cfeck:

Use QPainter to render preview

Reviewed by Lucas Murray
BUG: 203842


 M  +16 -6     preview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1015361
Comment 4 Christoph Feck 2009-08-25 13:16:14 UTC
SVN commit 1015363 by cfeck:

Use QPainter to render preview (backport r1015361)

CCBUG: 203842


 M  +16 -6     preview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1015363
Comment 5 Martin Flöser 2012-04-13 19:22:37 UTC
Bulk change: move all KWin kcm bugs to product kwin