Use QPainter to render preview

Reviewed by Lucas Murray
BUG: 203842

svn path=/trunk/KDE/kdebase/workspace/; revision=1015361